--- a/chefai-companion/api/.env.example
+++ b/chefai-companion/api/.env.example
@@ -1,4 +1,6 @@
 PORT=5000
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=your_actual_openai_api_key_here
 NODE_ENV=development
+MONGODB_URI=mongodb+srv://cardboardpaper91:REPLACE_WITH_PASSWORD@cluster.mongodb.net/chefai?retryWrites=true&w=majority
+JWT_SECRET=chefai_secret_key_2025_change_this_in_production
 DEMO_MODE=false
