--- a/chefai-companion/api/package.json
+++ b/chefai-companion/api/package.json
@@ -8,13 +8,20 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["recipe", "ai", "cooking"],
+  "keywords": [
+    "recipe",
+    "ai",
+    "cooking"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.0.0",
     "openai": "^4.20.1"
   },
   "devDependencies": {
